# Syntropy

./: .gitignore  DW.sln  Syntropy.sln  export_libs.bat  readme.md  sh.exe.stackdump  syntropy.sln
_v17/extra/bulk/: CMakeLists.txt
_v17/extra/bulk/include/bulk/: bulk.h  bulk_math.h
_v17/extra/bulk/src/bulk/: bulk.cpp
_v17/extra/unit_test/: CMakeLists.txt
_v17/extra/unit_test/include/unit_test/: unit_test_application.h
_v17/extra/unit_test/src/unit_test/: unit_test.cpp
extra/simple_compliance/: CMakeLists.txt
extra/simple_compliance/include/simple_compliance/: bulk.h
extra/simple_compliance/src/simple_compliance/: simple_compliance.cpp
extra/simple_lib/: CMakeLists.txt
simple_dependency/: CMakeLists.txt
syntropy/: CMakeLists.txt  syntropy.vcxproj.filters  syntropy.vcxproj.vcxproj
syntropy/import/core/: language.ixx  span.ixx  types.ixx  unique.ixx
syntropy/import/math/: hash.ixx
syntropy/import/memory/: allocator.ixx  buffer.ixx  memory.ixx
syntropy/include/syntropy/core/algorithms/: compare.h  compare_extensions.h  swap_extensions.h  to_string.h  to_string_extensions.h
syntropy/include/syntropy/core/comparisons/: compare.h  compare_extensions.h  ordering.h
syntropy/include/syntropy/core/concepts/: bidirectional_range.details.h  bidirectional_range.h  bidirectional_range.inl  contiguous_range.details.h  contiguous_range.h  contiguous_range.inl  forward_range.details.h  forward_range.details.inl  forward_range.h  forward_range.inl  ntuple.details.h  ntuple.h  ntuple.inl  random_access_range.h  random_access_range.inl  reverse_range.details.h  reverse_range.h  reverse_range.inl  sized_range.h  sized_range.inl  zip_range.details.h  zip_range.h  zip_range.inl
syntropy/include/syntropy/core/containers/: fix_array.h  fix_array.inl
syntropy/include/syntropy/core/foundation/: ordering.h  span.h  tuple.details.h  tuple.details.inl  tuple.h  unique_ptr.h  unique_ptr.inl
syntropy/include/syntropy/core/ranges/: bidirectional_range.h  contiguous_range.details.h  contiguous_range.h  contiguous_range.inl  forward_range.details.h  forward_range.details.inl  forward_range.h  forward_range.inl  random_access_range.details.h  random_access_range.h  random_access_range.inl  range.details.h  range.h  range.inl  range_extensions.h  range_iterator.h  reverse_range.h  reverse_range.inl  sized_range.details.h  sized_range.h  slice_range.h  span.h  span.inl  zip_range.h  zip_range.inl
syntropy/include/syntropy/core/records/: record.h  record_extensions.h  sequence_extensions.h  tuple.h
syntropy/include/syntropy/core/reflection/: type_id.h  type_id.inl
syntropy/include/syntropy/core/sequences/: sequence.h  tuple.h
syntropy/include/syntropy/core/strings/: string.h  string.inl  string_extensions.h  string_view.h  string_view.inl  to_string.h  to_string_extensions.h
syntropy/include/syntropy/core/support/: compare.h  compare.inl  event.details.h  event.details.inl  event.h  event.inl  ordering.h  scope_guard.h  scope_guard.inl  swap.details.h  swap.h  visitor.h  visitor.inl
syntropy/include/syntropy/core/toolset/: event.h  swap.h  swap_extensions.h  visitor.h
syntropy/include/syntropy/core/tuples/: ntuple.details.h  ntuple.h  ntuple.inl  tuple.details.h  tuple.details.inl  tuple.h  tuple.inl
syntropy/include/syntropy/deprecated/allocators/: allocation_context.h  fallback_allocator.h  null_allocator.h  pool_allocator.h  stack_allocator.h  virtual_allocator.h  virtual_stack_allocator.h
syntropy/include/syntropy/deprecated/application/: command_line.h  command_parser.h
syntropy/include/syntropy/deprecated/diagnostics/: log_event.h  (+1 more)
syntropy/include/syntropy/diagnostics/: assert.h  debugger.h
syntropy/include/syntropy/hal/: hal_macro.h
syntropy/include/syntropy/math/: math.h  math.inl  numbers.h
syntropy/source/core/: types.cpp
syntropy/source/math/: hash.cpp
syntropy/source/memory/: allocator.cpp  buffer.cpp  memory.cpp
syntropy/src/syntropy/: syntropy.cpp
syntropy/src/syntropy/diagnostics/: debugger.cpp
syntropy/src/syntropy/hal/: hal_debugger.h
(+1672 files in other folders)
